--- a/templates/main_page.html
+++ b/templates/main_page.html
@@ -41,6 +41,18 @@
 
         <script>
             $(document).ready(function() {
+                $.ajax({
+                    url: '/prompt',
+                    type: 'GET',
+                    success: function(data) {
+                        $('#results').html(data);
+                    },
+                    error: function(xhr, status, error) {
+                        $('#results').html("Error: " + error);
+                    }
+            });
+
+                
                 // Create prompt
                 /*
                 $("#createPromptForm").submit(function(e) {
@@ -53,10 +65,7 @@
                     });
                 });
 
-                // Refresh prompts
-                $("#refreshData").click(function() {
-                    refreshData();
-                });
+                
 
                 // Function to refresh data
                 function refreshData() {
@@ -68,8 +77,9 @@
 
                 // Initial data load
                 refreshData();
-            });
             */
+            });
+            
         </script>
     </body>
 </html>
