--- a/templates/main_page.html
+++ b/templates/main_page.html
@@ -12,20 +12,108 @@
 
     </head>
 
-        <body>
+    <body>
         <div class="bg-dark text-light">
             <div class="container-fluid text-center">
                 <div class="row">
                     <div class="col-sm-12">
                         <h1>Prompt Database</h1>
-                        <!-- Add new prompt form -->
-                        <form id="createPromptForm">
-                            <input type="text" id="newPromptText" placeholder="Enter new prompt">
-                            <button type="submit" class="btn btn-primary">Add Prompt</button>
-                        </form>
+                        
+                        
+                        
                     </div>
                 </div>
             </div>
+
+            
+                <!-- Add new prompt form will be called by a jQuery POST Request -->
+                <!-- Prompt database JSON format (need to collect data for each of these fields except id. parent_prompt_id is optional):
+                # {
+                #     "id": int,
+                #     "name": string,
+                #     "prompt_content": string,
+                #     "prompt_variables": string,
+                #     "designed_for": string,
+                #     "parent_prompt_id": int
+                #}
+                -->
+            <div class="container">
+                <div class="row">
+                    <form id="promptForm" class="form-inline">
+
+                        <div class="col-sm-2">
+                            <div class="form-group">
+                                <label for="name">Name</label>
+                                <input type="text" class="form-control" id="name" name="name" placeholder="Enter name" required>
+                            </div>
+                        </div>
+
+                        <div class="col-sm-2">
+                            <div class="form-group">
+                                <label for="promptContent">Prompt Content</label>
+                                <textarea class="form-control" id="promptContent" name="prompt_content" rows="1" placeholder="Enter prompt content" required></textarea>
+                            </div>
+                        </div>
+
+                        <div class="col-sm-2">
+                            <div class="form-group">
+                                <label for="promptVariables">Prompt Variables</label>
+                                <input type="text" class="form-control" id="promptVariables" name="prompt_variables" placeholder="Enter prompt variables" required>
+                            </div>
+                        </div>
+
+                        <div class="col-sm-2">
+                            <div class="form-group">
+                                <label for="designedFor">Designed For</label>
+                                <input type="text" class="form-control" id="designedFor" name="designed_for" placeholder="Enter designed for" required>
+                            </div>
+                        </div>
+                        <div class="col-sm-2">
+                            <div class="form-group">
+                                <label for="parentPromptId">Parent Prompt ID (Optional)</label>
+                                <input type="number" id="parentPromptId" name="parent_prompt_id" placeholder="Enter parent prompt ID">
+                            </div>
+                        </div>
+
+                        <div class="col-sm-2">
+                            <button type="button" class="btn btn-primary" id="submitForm">Submit</button>
+                        </div>
+
+                    </form>
+                </div>
+            </div>
+
+            <script>
+                $(document).ready(function() {
+                    $('#submitForm').click(function() {
+                        var formData = {
+                            name: $('#name').val(),
+                            prompt_content: $('#promptContent').val(),
+                            prompt_variables: $('#promptVariables').val(),
+                            designed_for: $('#designedFor').val(),
+                            parent_prompt_id: $('#parentPromptId').val()
+                        };
+                
+                        $.ajax({
+                            url: '/prompt',
+                            type: 'POST',
+                            contentType: 'application/json',
+                            data: JSON.stringify(formData),
+                            dataType: 'json',
+                            success: function(data) {
+                                console.log('Success:', data);
+                                alert('Prompt added successfully');
+                            },
+                            error: function(error) {
+                                console.error('Error:', error);
+                                alert('Error adding prompt');
+                            }
+                        });
+                    });
+                });
+            </script>
+                    
+            
 
             <div class="container-fluid">
                 <div class="row">
